--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-calendars": "^1.1305.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-reanimated": "~3.10.1",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.2.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
