--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/metro-runtime": "~3.2.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.5",
     "expo": "~51.0.8",
     "expo-font": "~12.0.5",
     "expo-status-bar": "~1.12.1",
@@ -20,11 +21,15 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-calendars": "^1.1305.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-svg": "15.2.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-uuid": "^2.0.2",
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
