--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/metro-runtime": "~3.2.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "expo": "~51.0.8",
     "expo-font": "~12.0.5",
     "expo-status-bar": "~1.12.1",
