--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/messaging": "^20.1.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "expo": "~51.0.8",
     "expo-font": "~12.0.5",
+    "expo-network": "^6.0.1",
+    "expo-notifications": "~0.28.9",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.2",
+    "install": "^0.13.0",
     "lodash.filter": "^4.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
